-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 23
-
Component/s: hotspot
-
b25
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8350914 | 21.0.8-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8334359 | 21.0.5 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8340126 | 17.0.14 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
Reason is that gtest forces a call void* no_data_copy = GuardedMemory::wrap_copy(no_data, 0); with 0 length . This leads to a special case for memcpy .
gtest/GTestWrapper.jtr
/jdk/src/hotspot/share/memory/guardedMemory.cpp:35:11: runtime error: null pointer passed as argument 2, which is declared to never be null
#0 0x7f174d684227 in GuardedMemory::wrap_copy(void const*, unsigned long, void const*) /jdk/src/hotspot/share/memory/guardedMemory.cpp:35
#1 0x7f174dd210c3 in GuardedMemory_wrap_Test::TestBody() /jdk/test/hotspot/gtest/memory/test_guardedMemory.cpp:146
#2 0x7f17526f8d63 in testing::Test::Run() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:2687
#3 0x7f17526f8d63 in testing::Test::Run() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:2677
#4 0x7f17526f946d in testing::TestInfo::Run() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:2836
#5 0x7f1752729ef8 in testing::TestSuite::Run() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:3015
#6 0x7f1752729ef8 in testing::TestSuite::Run() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:2968
#7 0x7f175272aec5 in testing::internal::UnitTestImpl::RunAllTests() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:5920
#8 0x7f17526f0fcf in bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:2670
#9 0x7f17526f0fcf in testing::UnitTest::Run() /tools/gtest/googletest-1.14.0/googletest/src/gtest.cc:5484
#10 0x7f174d8c84d7 in RUN_ALL_TESTS() /tools/gtest/googletest-1.14.0/googletest/include/gtest/gtest.h:2317
#11 0x7f174d8c84d7 in runUnitTestsInner /jdk/test/hotspot/gtest/gtestMain.cpp:290
#12 0x558be83647d8 in main /jdk/test/hotspot/gtest/gtestLauncher.cpp:40
#13 0x7f174734c24c in __libc_start_main (/lib64/libc.so.6+0x3524c) (BuildId: f732026552f6adff988b338e92d466bc81a01c37)
- backported by
-
JDK-8334359 ubsan: guardedMemory.cpp:35:11: runtime error: null pointer passed as argument 2, which is declared to never be null
-
- Resolved
-
-
JDK-8340126 ubsan: guardedMemory.cpp:35:11: runtime error: null pointer passed as argument 2, which is declared to never be null
-
- Resolved
-
-
JDK-8350914 ubsan: guardedMemory.cpp:35:11: runtime error: null pointer passed as argument 2, which is declared to never be null
-
- Resolved
-
- links to
-
Commit
openjdk/jdk21u-dev/c08de562
-
Commit
openjdk/jdk/be1d374b
-
Commit(master)
openjdk/jdk17u-dev/7161e295
-
Review
openjdk/jdk21u-dev/726
-
Review
openjdk/jdk/19382
-
Review(master)
openjdk/jdk17u-dev/2829