8332825: ubsan: guardedMemory.cpp:35:11: runtime error: null pointer passed as argument 2, which is declared to never be null

Backport-of: be1d374bc54d43aae3b3c1feace22d38fe2156b6